Bug 1396110 - Fix races during watchdog shutdown. r=billm

This patch also ensures that we won't accidentally try stopping slow scripts
when we're shutting down the watchdog manager.

MozReview-Commit-ID: EMb0enfivd8